# claude-notify

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
capabilities/: Cargo.toml
capabilities/src/: lib.rs  rules.rs  tools.rs
cli/: Cargo.toml
cli/src/: client.rs  main.rs  ui.rs  validate.rs  workflows.rs
cli/src/review/: mod.rs  ui.rs
config/: Cargo.toml
config/src/: lib.rs  rules.rs  tools.rs
dev/: run-local.sh  webhook-logger.py
docs/: reactive-migration-contract.md
gateway/: Cargo.toml  smoke-test.sh
gateway/config/: smoke-test.json  test-local.json  tools.json
gateway/src/: main.rs  question.rs  types.rs
gateway/src/providers/: claude_code.rs  cursor.rs  mod.rs  opencode.rs
hook/: Cargo.toml
hook/src/: main.rs
local-agent/: Cargo.toml  build.rs
local-agent/src/: egress.rs  egress_config.rs  main.rs
proto/: worker.proto
protocol/: Cargo.toml
protocol/src/: approval.rs  config.rs  gateway.rs  hooks.rs  job_events.rs  lib.rs  orchestration.rs  presence.rs  question.rs  secret.rs  sessions.rs  tool.rs  tool_call.rs
provider-plugins/opencode/: README.md  agent-hub.test.ts  agent-hub.ts  generate-types.ts  package.json  tsconfig.json
server/: Cargo.toml  DEPLOY.md  Dockerfile  README.md  build.rs
server/src/: error.rs  grpc.rs  main.rs  mcp.rs
server/src/server/: approvals.rs  auth.rs  config.rs  hooks.rs  job_events.rs  mod.rs  notifier.rs  oauth.rs  orchestration.rs  presence.rs  pushover.rs  questions.rs  sessions.rs  storage.rs  task_adapter.rs  task_files.rs  task_vikunja.rs  web.rs  webhook.rs  workflows.rs
server/templates/: approval_detail.html  dashboard.html  login.html  orchestration_dashboard.html  orchestration_job_detail.html  orchestration_jobs.html  orchestration_transcripts.html  orchestration_work_item_detail.html  orchestration_work_items.html  orchestration_workers.html
src/: main.rs  mcp.rs
src/server/: auth.rs  config.rs  hooks.rs  mod.rs  presence.rs  pushover.rs  sessions.rs
workflows/: sample_child_unit.toml  sample_github_pr.toml  sample_local_exec.toml  sample_managed_exec.toml  sample_parent_child.toml  sample_reactive_exec.toml  simple_code_change.toml
