[package]
name = "agent-hub-gateway"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "agent-hub-gateway"
path = "src/main.rs"

[dependencies]
capabilities = { path = "../capabilities" }
config = { path = "../config" }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
