[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
schemars = { version = "1", features = ["uuid1", "chrono04"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
